--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,22 @@ aliyun-python-sdk-kms==2.16.5
 antlr4-python3-runtime==4.9.3
 audioop-lts==0.2.1
 audioread==3.0.1
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
 crcmod==1.7
 cryptography==44.0.2
 decorator==5.2.1
 editdistance==0.8.1
 filelock==3.18.0
+Flask==3.1.0
 fsspec==2025.3.0
 funasr==1.2.6
 hydra-core==1.3.2
 idna==3.10
+itsdangerous==2.2.0
 jaconv==0.4.0
 jamo==0.4.1
 jieba==0.42.1
@@ -35,6 +39,7 @@ numpy==2.1.3
 omegaconf==2.3.0
 oss2==2.19.1
 packaging==24.2
+pika==1.3.2
 platformdirs==4.3.7
 pooch==1.8.2
 protobuf==6.30.1
@@ -64,3 +69,4 @@ tqdm==4.67.1
 typing_extensions==4.12.2
 umap-learn==0.5.7
 urllib3==2.3.0
+Werkzeug==3.1.3
